<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fenghks.business.orders.AddOrderActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lgray"
    android:orientation="vertical">
    <include android:id="@+id/add_order_header"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/ll_orderno"
        android:orientation="horizontal"
        android:layout_below="@id/add_order_header"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_orderno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:textSize="20dp"
            android:text="@string/order_no"/>
        <EditText
            android:id="@+id/et_orderno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/hint_orderno"
            android:text="#"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_customer_name"
        android:orientation="horizontal"
        android:layout_below="@id/ll_orderno"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_custom_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:textSize="20dp"
            android:text="@string/customer_name"/>
        <EditText
            android:id="@+id/et_custom_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/hint_customer_name"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_customer_phone"
        android:orientation="horizontal"
        android:layout_below="@id/ll_customer_name"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_custom_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:textSize="20dp"
            android:text="@string/customer_phone"/>
        <EditText
            android:id="@+id/et_custom_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPhonetic"
            android:hint="@string/hint_customer_phone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_customer_address"
        android:orientation="horizontal"
        android:layout_below="@id/ll_customer_phone"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_custom_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:textSize="20dp"
            android:text="@string/customer_address"/>
        <EditText
            android:id="@+id/et_custom_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/hint_customer_address"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_send_time"
        android:orientation="horizontal"
        android:layout_below="@id/ll_customer_address"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_title_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:textSize="20dp"
            android:text="@string/send_time"/>

        <TextView
            android:id="@+id/tv_send_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:hint="@string/hint_send_time"
            android:textSize="18sp" />
    </LinearLayout>
    <RadioGroup
        android:id="@+id/rg_order_from"
        android:orientation="horizontal"
        android:layout_below="@id/ll_send_time"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_from_eleme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/from_eleme"/>
        <RadioButton
            android:id="@+id/rb_from_meituan"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_meituan"/>
        <RadioButton
            android:id="@+id/rb_from_baidu"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_baidu"/>
        <RadioButton
            android:id="@+id/rb_from_koubei"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/from_koubei"/>
        <RadioButton
            android:id="@+id/rb_from_other"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/from_other"/>
    </RadioGroup>
    <LinearLayout
        android:id="@+id/ll_food_area"
        android:orientation="vertical"
        android:layout_below="@id/rg_order_from"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginLeft="48dp"
                android:textSize="20dp"
                android:text="@string/food_items"/>
            <TextView
                android:id="@+id/tv_add_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:drawableLeft="@drawable/ic_add_blue_24dp"
                android:text="@string/food_add"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center_vertical|left"
                android:paddingLeft="32dp"
                android:hint="@string/hint_food_name"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/et_food_price1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_food_price"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/et_food_amount1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_food_amount"
                android:text=""
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/iv_delete_food1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/cancel"
                android:padding="8dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/ll_food_area"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:textColor="@color/colorAccent"
            android:text="@string/confirm"/>
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:textColor="@color/colorAccent"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>