<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<EditText
    android:id="@+id/et_food_name"
    android:layout_width="0dp"
    android:layout_weight="2"
    android:paddingLeft="16dp"
    android:gravity="center_vertical|left"
    android:background="@null"
    android:textSize="18sp"
    android:hint="@string/hint_food_name"
    android:text="@string/food_other"
    android:layout_height="wrap_content" />
<EditText
    android:id="@+id/et_food_price"
    android:layout_width="0dp"
    android:layout_weight="1"
    android:gravity="center"
    android:background="@null"
    android:textSize="18sp"
    android:inputType="numberDecimal"
    android:hint="@string/hint_needed"
    android:layout_height="wrap_content" />
<EditText
    android:id="@+id/et_food_amount"
    android:layout_width="0dp"
    android:layout_weight="1"
    android:gravity="center"
    android:inputType="number"
    android:background="@null"
    android:textSize="18sp"
    android:hint="@string/hint_food_amount"
    android:text="1"
    android:layout_height="wrap_content" />
<ImageView
    android:id="@+id/iv_delete_food"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:scaleType="center"
    android:src="@drawable/ic_delete_blue_24dp"/>
</LinearLayout>