<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fenghks.business.business.AboutUsActivity">
    <include layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:text="@string/app_name"/>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lgray"
            android:text="@string/version"/>
        <TextView
            android:id="@+id/tv_version"
            android:layout_marginLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lgray"
            android:text="1.0"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@mipmap/ic_logo"/>
    <TextView
        android:id="@+id/tv_zbout_us"
        android:paddingTop="16dp"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:paddingBottom="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us"/>
    <TextView
        android:id="@+id/tv_check_new"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_checknew_blue_24dp"
        android:text="@string/check_new_version"/>
    <TextView
        android:id="@+id/tv_contact_service"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_phone"/>
    <TextView
        android:id="@+id/tv_copyright"
        android:gravity="center"
        android:padding="8dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lgray"
        android:text="@string/copyright"/>
</LinearLayout>
