<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/menu_search"
        app:showAsAction="always|collapseActionView" />
    <!--app:actionViewClass="android.support.v7.widget.SearchView"/>-->
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always" />

    <!--<item
        android:id="@+id/menu_bluetooth"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/bluetooth_print"
        app:showAsAction="never" />-->
    <item
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_more_yellow_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_settings_yellow_24dp"
                android:title="@string/menu_settings"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/printer_manage"
                android:icon="@drawable/ic_printer_manage"
                android:title="@string/printer_manage"
                app:showAsAction="never" />
            <!--<item
                android:id="@+id/menu_obtain_print_list"
                android:icon="@drawable/ic_print_list_yellow_24dp"
                android:title="@string/obtainPrintList"
                app:showAsAction="never" />-->
        </menu>
    </item>
    <!--<item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/menu_logout"
        app:showAsAction="never" />-->
</menu>